圖表星星有點問題

--- a/‎mainproject/templates/decision_tree.html
+++ b/‎mainproject/templates/decision_tree.html
@@ -52,9 +52,9 @@
             <h4>調整ST段斜率及運動是否誘發心絞痛預測結果</h4>
         </div>
         <div class="st-control">
-            <label for="k-slider">心電圖中ST段斜率：</label>
-            <input type="range" id="k-slider" min="0" max="2" value="1" class="slider">
-            <span id="k-value" class="value-display">1</span>
+            <label for="st-slider">心電圖中ST段斜率：</label>
+            <input type="range" id="st-slider" min="0" max="2" value="1" class="slider">
+            <span id="st-value" class="value-display">1</span>
         </div>
 
         <div class="angina-control">
