--- a/‎mainproject/static/css/decision_tree.css
+++ b/‎mainproject/static/css/decision_tree.css
@@ -149,7 +149,7 @@
     color: #0B346E;
 }
 
-/* K 值 Slider */
+/* st 值 Slider */ /*============================================================================*/
 .slider {
     width: 400px;
     height: 6px;
