--- a/‎mainproject/static/css/decision_tree.css
+++ b/‎mainproject/static/css/decision_tree.css
@@ -1,5 +1,6 @@
 /* --- 決策樹頁面 (decision_tree.css) --- */
 /* --- 1. 頁面主要佈局 --- */
+
 .logistic-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -149,7 +150,8 @@
     color: #0B346E;
 }
 
-/* st 值 Slider */ /*============================================================================*/
+/* st 值 Slider */
+/*============================================================================*/
 .slider {
     width: 400px;
     height: 6px;
@@ -665,4 +667,3 @@
 
 /* (SVG 高亮樣式已由 JS 注入，不需在此添加)
 */
-
