--- a/‎mainproject/templates/logistic.html
+++ b/‎mainproject/templates/logistic.html
@@ -41,7 +41,10 @@
                 <li><span class="legeng-0-test"></span>無心臟病(測試)</li>
                 <li><span class="legeng-1-test"></span>有心臟病(測試)</li>
             </ul>
-            <p class="help-text">圖表背景 (紅/藍) 代表模型的決策區域。您可以縮放或懸停</p>
+            <p class="help-text">
+                圖表背景 (紅/藍) 代表模型的決策區域。<br>
+                游標框選可以放大，點擊右上角工具列還原
+            </p>
         </div>
 
         <div class="control-panel">
