--- a/‎mainproject/templates/base.html
+++ b/‎mainproject/templates/base.html
@@ -16,7 +16,7 @@
     <!-- 導覽列 -->
     <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index')}}">職能發展學院-心臟病專題</a>
+            <a class="navbar-brand" href="{{ url_for('index')}}">職能發展學院-AI 賦能心臟病早期預警</a>
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="{{ url_for('index')}}" {% if request.endpoint=='index' %} class="active" {%
